@startuml
skinparam classAttributeIconSize 0

class ScheduleVaccineUI {
+run()
-introduceSnsNumberUI()
-selectVaccineTypeHealthCareCenterUI(healthcareCenter)
-selectVaccineTypeUI(vaccinationCenter)
-selectDateUI(vaccinationCenter)
-selectDateFromCurrentMonth(appointmentsList, slotsPerDay, vaccinesPerSlot)
-selectDateFromNextMonth(appointmentsList, slotsPerDay, vaccinesPerSlot)
-calculateSlotsPerDay(openingHour, closingHour, slotDuration)
-dayHasAvailability(slotsPerDay, vaccinesPerSlot, date, appointments)
-printAppointmentInfo(scheduledVaccineDto, vaccinationCenter)
-printValidAppointmentInfo(scheduledVaccineDto, vaccinationCenter)
-printInvalidAppointment()
}

class ScheduleVaccineController {
+ScheduleVaccineController()
+scheduleVaccine(scheduledVaccineDto, vaccinationCenter)
+validateAppointment(scheduledVaccineDto, vaccinationCenter)
+validateAppointmentAccordingToAgeGroupAndTimeSinceLastDose(scheduledVaccineDto, center)
-dataIsAllFilled(scheduledVaccineDto)
}


class VaccinationCenter {
-id
-name
-phoneNumber
-email
-fax
-website
-openingHour
-closingHour
-slotDuration
-vaccinesPerSlot
-road
-zipCode
-local
centerCoordinatorID
-arrivalsList
+VaccinationCenter(id, name, phoneNumber, email, fax, website, openingHour, closingHour, slotDuration, vaccinesPerSlot, road, zipCode, local, centerCoordinatorID)
+toString()
+validateVaccinationCenterHours(openingHour, closingHour)
+validateWebsite(website, topLevelDomain, worldWideWeb)
+validateEmail(email)
+validatePhoneNumberAndFax(strPhoneNumberOrFaxNumber)
+validateZipCode(strZipCode)
+validateSlotDuration(strSlotDuration)
+validateVaccinesPerSlot(strVaccinesPerSlot)
+validateVaccinationCenters()
+fullInfo()
+addAppointment(newAppointment)
+validateAppointment(scheduledVaccineDto)
-centerHasAvailability(appointmentsList, scheduledVaccineDto, center)
+validateAppointmentAccordingToAgeGroupAndTimeSinceLastDose(dto, company)
+validateAppointmentAccordingToAdminProcess(snsUser, dto, takenVaccine)
-getUserAgeGroup(snsUser, administrationProcess)
-validateAgeGroup(snsUser, administrationProcess)
}

class Vaccine {
-id;
-brand;
-vaccine type;
}

 class ScheduledVaccine {
 -snsUserNumber
 -date
 -vaccineType
 }

class SnsUser {
- Name;
- Sex;
- BirthDate;
- Address;
- PhoneNumber;
- Email;
- UserNumber;
- CitizenCardNumber;
- Password;
- takenVaccines;
+ SnsUser(Name, Sex, BirthDate, Address, Number, Email, snsUserNumber, CitizenCardNumber, Password)
+ validateEmail(String strEmail)
+ validateAddress(String strAddress)
+ validateSex(String strSex)
+ validateBirthDate(String strBirthDate)
+ validateSNSUser()
+ registerVaccine(TakenVaccine takenVaccine)
}

ScheduleVaccineUI ..> ScheduleVaccineController
ScheduleVaccineController ..> VaccinationCenter
ScheduleVaccineController -- ScheduledVaccine : creates
VaccinationCenter ..> Vaccine
VaccinationCenter ..> SnsUser
SnsUser -- Vaccine
VaccinationCenter --right> ScheduledVaccine : has a list of
@enduml